Views... magic... grrrrrrrr... HISS!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 
           </ul>
         </div>
+        <%= link_to "Home", root_url %>
       </div>
       <div class="pull-right text-right">
         <% if user_signed_in? %>
@@ -35,6 +36,7 @@
               <li><%= link_to 'Edit account details', edit_user_registration_path %></li>
             </ul>
           </div>
+          <%= button_to 'New Bot', new_bot_path, class: 'btn btn-danger nav-item' %>
         <% else %>
           <%= link_to new_user_registration_path do %>
             <i class="fa fa-user-plus"></i> Sign up
