--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,19 +17,34 @@
 @import 'variables';
 
 .topbar {
-    background: $primary;
+  background: $primary;
+  color: white;
+  padding: 1em;
+  border-bottom: 1px solid darken($primary, 15%);
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: space-between;
+
+  a, a:visited, a:hover, a:active {
     color: white;
-    padding: 1em;
-    border-bottom: 1px solid darken($primary, 15%);
-    margin-bottom: 1em;
+    margin: 0 1em;
+  }
 
-    a, a:visited, a:hover, a:active {
-        color: white;
-        margin: 0 1em;
+  .dropdown-menu a, .dropdown-menu a:visited, .dropdown-menu a:hover, .dropdown-menu a:active {
+    color: $key;
+    margin: unset;
+  }
+
+  div {
+    display: inline-block;
+    align-self: center;
+
+    &.tb-left {
+      width: 20%;
     }
 
-    .dropdown-menu a, .dropdown-menu a:visited, .dropdown-menu a:hover, .dropdown-menu a:active {
-        color: $key;
-        margin: unset;
+    &.tb-right {
+      width: 80%;
     }
+  }
 }
