--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -29,14 +29,16 @@
           <small><i>(some status emojis)</i></small></td>
         <td>
           <span>
-            <%= raw(bot.hashtags.map { |ht| link_to "##{ht.name}", nw }.join(', ')) %>
+            <!-- <%= true || raw(bot.hashtags.map { |ht| link_to "##{ht.name}", ht }.join(', ')) %> -->
+            <%= number_ids_for(bot.hashtags, modal_name: '#hashtagModal') { |ht| {id: ht.id, name: ht.name} } %>
           </span>
           <span data-toggle="modal" data-target="#newHashtagModal" data-bot-id="<%= bot.id %>">+add</span>
           <!-- <%= link_to '+add', new_hashtag_path(bot: bot) %> -->
         </td>
         <td>
           <span>
-            <%= raw(bot.networks.map { |nw| link_to "##{nw.id}", nw }.join(', ')) %>
+            <!-- <%= true || raw(bot.networks.map { |nw| link_to "##{nw.id}", nw }.join(', ')) %> -->
+            <%= number_ids_for(bot.networks, modal_name: '#networkModal') { |nw| {id: nw.id, name: nw.name} } %>
           </span>
           <span data-toggle="modal" data-target="#newNetworkMembershipModal" data-bot-id="<%= bot.id %>">+add</span>
           <!-- <%= link_to '+add', new_network_membership_path(bot: bot) %> -->
@@ -115,7 +117,7 @@
       </div>
       <%= form_tag add_hashtag_to_bot_path, remote: true, authenticity_token: true, id: 'newHashtagModalForm' do %>
         <div class="modal-body">
-          <%= hidden_field_tag 'bot_id' %>
+          <%= hidden_field_tag 'id' %>
           <h3>Add existing hashtag to bot</h3>
           <div class="form-group">
             <%= label_tag 'hashtag[id]', "Hashtag:" %>
@@ -148,7 +150,7 @@
       </div>
       <%= form_tag add_network_membership_to_bot_path, remote: true, authenticity_token: true, id: 'newNetworkMembershipModalForm' do %>
         <div class="modal-body">
-          <%= hidden_field_tag 'bot_id' %>
+          <%= hidden_field_tag 'id' %>
           <h3>Add existing nework to bot</h3>
           <div class="form-group">
             <%= label_tag 'network[id]', "Network:" %>
@@ -166,6 +168,46 @@
           <%= submit_tag "Submit", class: 'btn btn-primary' %>
         </div>
       <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="hashtagModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Hashtag!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Name: <span class="name"></span></p>
+        <p>Id: <span class="id"></span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="networkModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Network!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Name: <span class="name"></span></p>
+        <p>Id: <span class="id"></span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
