--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -4,22 +4,34 @@
 <% path ||= Bot.new %>
 
 <%= form_tag path, **form_options do %>
-  <!-- TODO: We should have some way to display errors here, like in rev b966817b2acb905be5fb66072e45440b1c5f3332. We should also display errors in the ajax calls in index.html.erb -->
+  <!-- TODO: We should have some way to display errors here, like in rev b966817b2acb905be5fb66072e45440b1c5f3332.
+             We should also display errors in the ajax calls in index.html.erb -->
   <%= hidden_field_tag 'id', @bot.try(:id) %>
 
-  <div class="form-group">
-    <%= label_tag 'bot[username]', "Username: ", class: 'col-form-label' %>
+  <div class="field">
+    <%= label_tag 'bot[username]' do %>
+      <i class="fas fa-user-circle"></i> Username
+    <% end %><br/>
     <%= text_field_tag 'bot[username]', @bot.try(:username), class: 'form-control' %>
-  </div>
+  </div><br/>
 
-  <div class="form-group">
-    <%= label_tag 'bot[type_id]', "Bot" %>
-    <%= select_tag 'bot[type_id]', options_with_colors(Bot::Type.all, :id, :name){ |bot| bot.status_color(prefix: 'bg') }, class: 'form-control select2' %>
-  </div>
+  <div class="field">
+    <%= label_tag 'bot[type_id]' do %>
+      <i class="fas fa-clipboard"></i> Current Status
+    <% end %><br/>
+    <%= select_tag 'bot[type_id]',
+                   options_with_colors(Bot::Type.all, :id, :name, selected: @bot.try(:type_id)) { |bot| bot.status_color(prefix: 'bg') },
+                   class: 'form-control select2', include_blank: true %>
+  </div><br/>
 
   <% if submit_btn %>
     <div class="actions">
-      <%= submit_tag %>
+      <button type="submit" class="btn btn-primary">
+        <i class="fas fa-check"></i> Save
+      </button>
+      <%= link_to :back, class: 'btn btn-danger' do %>
+        <i class="fas fa-times"></i> Cancel
+      <% end %>
     </div>
   <% end %>
 <% end %>
