--- a/app/views/bots/_modal.html.erb
+++ b/app/views/bots/_modal.html.erb
@@ -7,16 +7,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title"><%= title %></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+        <h4 class="modal-title"><%= title %></h4>
       </div>
       <div class="modal-body">
         <%= yield %>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <%= submit_tag submit_btn, class: 'btn btn-primary', form: form_id if submit_btn %>
       </div>
     </div>
