--- a/app/views/timelines/edit.html.erb
+++ b/app/views/timelines/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Timeline</h1>
+<h1>Editing Action</h1>
 
-<%= render 'form', timeline: @timeline %>
+<%= render 'form', action: @action %>
 
-<%= link_to 'Show', @timeline %> |
+<%= link_to 'Show', @action %> |
 <%= link_to 'Back', timelines_path %>
