--- a/app/views/timelines/_form.html.erb
+++ b/app/views/timelines/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: timeline, local: true) do |form| %>
-  <% if timeline.errors.any? %>
+<%= form_with(model: action, local: true) do |form| %>
+  <% if action.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(timeline.errors.count, "error") %> prohibited this timeline from being saved:</h2>
+      <h2><%= pluralize(action.errors.count, "error") %> prohibited this timeline from being saved:</h2>
 
       <ul>
-      <% timeline.errors.full_messages.each do |message| %>
+      <% action.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
