--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Timeline</h1>
 
-<%= render 'form', timeline: @timeline %>
+<%= render 'form', action: @action %>
 
 <%= link_to 'Back', timelines_path %>
