--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_timeline_path(@timeline) %> |
+<%= link_to 'Edit', edit_timeline_path(@action) %> |
 <%= link_to 'Back', timelines_path %>
